[package]
name = "rabitq"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the RaBitQ vector search algorithm."
license = "AGPL-3.0"
documentation = "https://docs.rs/rabitq"
repository = "https://github.com/kemingy/rabitq"
keywords = ["vector-search", "quantization", "binary-dot-product"]
categories = ["algorithms", "science"]

[dependencies]
argh = "0.1"
env_logger = "0.11"
faer = "0.19"
log = "0.4"
num-traits = "0.2"
rand = "0.8"
serde = "1"
serde_json = "1"

[profile.dev.package.faer]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.perf]
inherits = "release"
debug = true
lto = false
codegen-units = 16
panic = "unwind"
