[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.2.1"
edition = "2021"
description = "A Rust implementation of the RaBitQ vector search algorithm."
license = "AGPL-3.0"
authors = ["Keming <kemingy94@gmail.com>"]

[workspace.dependencies]
log = "0.4"
faer = "0.19"

# root package
[package]
name = "rabitq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/rabitq"
repository = "https://github.com/kemingy/rabitq"
keywords = ["vector-search", "quantization", "binary-dot-product"]
categories = ["algorithms", "science"]

[dependencies]
faer = { workspace = true }
log = { workspace = true }
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4.3"
serde = "1"
serde_json = "1"

[profile.dev.package.faer]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.perf]
inherits = "release"
debug = true
lto = false
codegen-units = 16
panic = "unwind"
